2003-04-14  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclClock.c:	Corrected compiler warnings.
	* generic/tclTest.c:

2003-04-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/Makefile.in: Don't define TCL_DBGX
	symbol for every compile. Instead, define
	TCL_PIPE_DLL only when compiling tclWinPipe.c.
	This will break other build systems, so
	they will need to remove the TCL_DBGX define
	and replace it with a define for TCL_PIPE_DLL.
	* win/tclWinPipe.c (TclpCreateProcess):
	Remove PREFIX_IDENT and DEBUG_IDENT from
	top of file. Use TCL_PIPE_DLL passed in
	from build env instead of trying to construct
	the dll name from already defined symbols.
	This approach is more flexible and better
	in the long run.

2003-04-14  Kevin Kenny  <kennykb@acm.org>

	* win/tclWinFile.c: added conditionals to restore compilation on
	VC++6, which was broken by recent changes.
	
2003-04-14  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclIOUtil.c: 
	* generic/tclPathObj.c: 
	* generic/tclFileSystem.h: overlooked one function which
	was duplicated, so this is now shared between modules.
	* win/tclWinFile.c: allow this file to compile with VC++ 5.2 again
	since Mingw build fixes broke that.
	
2003-04-13  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/configure: Regen.
	* win/configure.in: Add check for FINDEX_INFO_LEVELS
	from winbase.h, known to be a problem in VC++ 5.2.
	Define HAVE_NO_FINDEX_ENUMS if the define does not
	exist.
	* win/tclWinFile.c: Put declarations for
	FINDEX_INFO_LEVELS and FINDEX_SEARCH_OPS inside
	a check for HAVE_NO_FINDEX_ENUMS so that these are
	not declared twice. This fixes the Mingw build.
	* win/tclWinTime.c: Rework the init of timeInfo
	so that the number or initializers matches the
	declaration. This was broken under Mingw. Add
	cast to avoid compile warning when calling the
	AccumulateSample function.

2003-04-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/Makefile.in (GENERIC_OBJS): add missing tclPathObj.c
